--- a/WebContent/css/nav.css
+++ b/WebContent/css/nav.css
@@ -1,56 +1,63 @@
-.nav-item a{
-	color:white;
-	float:left;
-	background-color:#38985A;
-}
-
-.b_color{
-	
-	background-color:#38985A;
-}
-
-.nav-item a:hover{
-	color: black;
-}
-
-li{
-	text-align: center;
-	margin: 10px;
-	font-size: 20px;
-}
-                	
-#side_menu{
-	width: 40%;
-	float: right;
-	list-style: none;
-	text-align: right;
-}
-        	
-#side_menu li{
-	display: inline;
-}
-        	
-#side_menu a{
-	font-size: 50%;
-	color: black;
-	padding: 5px 10px;
-}
-
-.logoImg{
-	max-width: 150px;
-	min-width: 150px;
-	margin-bottom: 15px;
-	float: left;
-}
-
-a{
-	text-decoration: none;
-}
-
-.justify-content-center{
-	color:white;
-	background-color: #38985A;
-	text-align: center;
-	padding-top: 10px;
-	position: relative;
-}
+nav{
+    		position: absolute;
+    		top: 0;
+    		left: 0;
+    		right: 0;
+    		height: 63px;
+    		vertical-align: middle;
+    	}
+        .nav-item a{
+        	color:white;
+        }
+        .nav-item a:hover{
+        	color: black;
+        }       	
+        #side_menu{
+        	width: 40%;
+            float: right;
+        	list-style: none;
+        	text-align: right;
+        }
+        #side_menu li{
+        	display: inline;
+        }
+        #side_menu a{
+        	font-size: 50%;
+        	color: black;
+        	padding: 5px 10px;
+        }
+        .logoImg{
+        	max-height: 63px;
+        	height: 63px;
+        	margin-bottom: 15px;
+            float: left;
+        }
+        a{
+        	text-decoration: none;
+        }
+        .justify-content-center{
+        	background-color: #38985A;
+            padding-top: 10px;
+            position: absolute;
+            min-width: 100%;
+        }
+        .justify-content-center li{
+        	display: inline-block;
+            list-style-type: none;
+            margin-left: 120px;
+            margin-top: 10px;
+            font-size: 14pt;
+        }
+		.link{
+			vertical-align: middle;
+			text-align: right;
+			position: relative;
+			right: 0;
+		}
+		.right{
+			text-align: right;
+			width: 100%;
+		}
+		.right li:last-child{
+			margin-right: 70px;
+		}  
